--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+body{
+  scroll-behavior:smooth;
+  transition: all 0.2s;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#navBar{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  padding: 30px;
+  background-color: var(--background);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+#navBar a{
+  text-decoration: none;
+  color: var(--fontColor);
+  font-family: 'Roboto', sans-serif;
+  font-weight:500;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#logo{
+  width: 40%;
+  font-size: 40px;
+  font-family: 'Annie Use Your Telescope', cursive;
+}
+#links{
+  display: flex;
+  font-size: 1.25rem;
+  justify-content: space-evenly;
+  width: 40%;
+  scroll-behavior:smooth;
+}
+#modeBtn{
+  font-size: 1.25rem;
+  color: var(--fontColor);
+}
+#a{
+  background-color: var(--background);
+}
+#showcaseArea{
+  height: 80vh;
+  display: flex;
+  padding:50px;
+  justify-content: space-between;
+  align-items: center;
 }
