--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+:root{
+  /* --darkest: #1A120B; */
+  --darkest:#282A3A;
+  --background:#2F1B41;
+  --fontColor: #F05941;
+  --lightbackground:#872341;
+  --gradiant-dark-lower: wheat;
+  --gradiant-dark-upper: slategrey;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +15,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: background-color 0.3s, color 0.3s;
+  background-color: var(--background);
+  color: white;
+  @import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 }
 
 code {
