--- a/src/components/Floatingdiv.css
+++ b/src/components/Floatingdiv.css
@@ -1,17 +1,20 @@
 .floatingdiv{
-    border-radius: 38% 33% 61% 27% / 25% 62% 25% 62%;
+    /* border-radius: 38% 33% 61% 27% / 25% 62% 25% 62%; */
+    border-radius: 100%;
     width: 150px;
+    z-index: -100;
     height: 150px;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
-    animation: floatAnimation 5s infinite ease-in-out;
+    animation: floatAnimation 3s infinite ease-in-out;
     /* background: linear-gradient(135deg, #790252, #2a0845); */
-    background: linear-gradient(135deg, slategrey, wheat);
-    -webkit-box-shadow: 0 18.5px 25px 0.5px #353556;
--moz-box-shadow: 0 18.5px 25px 0.5px #353556;
-box-shadow: 0 18.5px 25px 0.5px #353556; 
+    /* background: linear-gradient(135deg, slategrey, wheat); */
+    background: linear-gradient(135deg, var(--lightblue),white);
+    -webkit-box-shadow: 0 18.5px 25px 0.5px #4e4e80;
+-moz-box-shadow: 0 18.5px 25px 0.5px #4e4e80;
+box-shadow: 0 18.5px 25px 0.5px #4e4e80; 
 
   }
   @keyframes floatAnimation {
@@ -19,6 +22,6 @@ box-shadow: 0 18.5px 25px 0.5px #353556;
       transform: translateY(0);
     }
     50% {
-      transform: translateY(-10px);
+      transform: translateY(-15px);
     }
   }
