--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 #navBar{
   position: fixed;
   width: 100%;
@@ -11,14 +11,26 @@
 }
 #navBar a{
   text-decoration: none;
-  color: var(--fontColor);
+  color: #d73c6b;
   font-family: 'Roboto', sans-serif;
-  font-weight:500;
+  font-weight:bolder;
+}
+#navbar a:hover{
+  color: white;
+}
+#showcase{
+  width: fit-content;
+  display: flex;
+  justify-content: right;
+}
+#showcase img{
+  width: 65%;
+  margin: auto;
 }
 #logo{
   width: 40%;
-  font-size: 40px;
-  font-family: 'Annie Use Your Telescope', cursive;
+  font-size: 2rem;
+  font-family: 'Orbitron', sans-serif;
 }
 #links{
   display: flex;
@@ -37,10 +49,80 @@
   background-color: var(--background);
 }
 #showcaseArea{
-  height: 80vh;
+  /* box-sizing: border-box; */
+  height: 100vh;
+  /* width: 100vw; */
   display: flex;
   padding:50px;
   justify-content: space-between;
   align-items: center;
   height: 95vh;
+  margin-bottom: 30vh;
+}
+#footer{
+  height: fit-content;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  padding-inline: 5%; 
+}
+#footer #links a{
+  color: white;
+  width: fit-content;
+}
+#footer #links a:hover{
+  color: black;
+}
+#socialBtns{
+  display: flex;
+  width: 30%;
+  justify-content: space-evenly;
+  list-style: none;
+  font-size: 2rem;
+  color: black;
+}
+#socialBtns a{
+  /* color: var(--darkest); */
+  color: white;
+}
+#linkdein a:hover{
+  color: #0072b1;
+}
+#github a:hover{
+  color: black;
+}
+#insta a:hover{
+  color: #fa7e1e;
+}
+#leetcode a:hover{
+  color:black
+}
+#social{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Times New Roman', Times, serif;
+}
+#footerLogo{
+  font-family: 'Orbitron', sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  
+}
+#footerLogo{
+  font-family: 'Orbitron', sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  
+}
+#aboutnavi{
+  height: 100vh;
+  margin-top: 20vh;
+  margin-bottom: 30vh;
+  
 }
